27. Remove element and 1470. Shuffle the array

--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 26. Remove dublicates from sorted array.\n",
+    "### 26. Remove dublicates from sorted array.\n",
     "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
     "\n",
     "Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.49 µs ± 97.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.56 µs ± 166 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -69,6 +69,80 @@
     "assert remove_dublicates(arr) == 5\n",
     "assert arr == [0, 1, 2, 3, 4, 2, 2, 3, 3, 4]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 27. Remove element.\n",
+    "Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. Then return the number of elements in nums which are not equal to val.\n",
+    "\n",
+    "Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
+    "\n",
+    "Change the array nums such that the first k elements of nums contain the elements which are not equal to val. The remaining elements of nums are not important as well as the size of nums.\n",
+    "Return k."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 3, 0, 4, 0, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_element(arr: list[int], val: int) -> list[int]:\n",
+    "    k = 0\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] != val:\n",
+    "            arr[k] = arr[i]\n",
+    "            k += 1\n",
+    "    return k\n",
+    "\n",
+    "nums = [0,1,2,2,3,0,4,2]\n",
+    "val = 2\n",
+    "assert remove_element(nums, val) == 5\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1470. Shuffle the array.\n",
+    "Given the array nums consisting of 2n elements in the form [x1,x2,...,xn,y1,y2,...,yn].\n",
+    "\n",
+    "Return the array in the form [x1,y1,x2,y2,...,xn,yn]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shuffle(arr: list[int], n: int) -> list[int]:\n",
+    "    res = []\n",
+    "    for i in range(n):\n",
+    "        res.append(arr[i])\n",
+    "        res.append(arr[i + n])\n",
+    "    return res\n",
+    "\n",
+    "nums = [2,5,1,3,4,7]\n",
+    "n = 3\n",
+    "assert shuffle(nums, n) == [2,3,5,4,1,7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
