--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -10,7 +10,9 @@
     "Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
     "\n",
     "Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. The remaining elements of nums are not important as well as the size of nums.\n",
-    "Return k."
+    "Return k.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=DEJAZBq0FDA"
    ]
   },
   {
@@ -80,7 +82,9 @@
     "Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
     "\n",
     "Change the array nums such that the first k elements of nums contain the elements which are not equal to val. The remaining elements of nums are not important as well as the size of nums.\n",
-    "Return k."
+    "Return k.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=Pcd1ii9P9ZI"
    ]
   },
   {
@@ -137,6 +141,73 @@
     "nums = [2,5,1,3,4,7]\n",
     "n = 3\n",
     "assert shuffle(nums, n) == [2,3,5,4,1,7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1929. Concatenation of array.\n",
+    "Given an integer array nums of length n, you want to create an array ans of length 2n where ans[i] == nums[i] and ans[i + n] == nums[i] for 0 <= i < n (0-indexed).\n",
+    "\n",
+    "Specifically, ans is the concatenation of two nums arrays.\n",
+    "\n",
+    "Return the array ans.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=68isPRHgcFQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2 µs ± 48.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def get_concatenation(arr: list[int]) -> list[int]:\n",
+    "    n = len(arr)\n",
+    "    res = [0] * 2 * n\n",
+    "    for i in range(n):\n",
+    "        res[i], res[i + n] = arr[i], arr[i]\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "nums = [1,2,1]\n",
+    "assert get_concatenation(nums) == [1,2,1,1,2,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.16 µs ± 103 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def get_concatenation(arr: list[int]) -> list[int]:\n",
+    "    res = []\n",
+    "    for i in range(2):\n",
+    "        for item in arr:\n",
+    "            res.append(item)\n",
+    "    return res\n",
+    "\n",
+    "nums = [1,2,1]\n",
+    "assert get_concatenation(nums) == [1,2,1,1,2,1]"
    ]
   },
   {
