--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -213,6 +213,76 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 1. Two sum.\n",
+    "Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
+    "\n",
+    "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+    "\n",
+    "You can return the answer in any order.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=KLlXCFG5TnA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.15 µs ± 38.2 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def two_sum(arr: list[int], target: int) -> list[int]:\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(i + 1, len(arr)):\n",
+    "            if arr[i] + arr[j] == target:\n",
+    "                return [i, j]\n",
+    "    return -1\n",
+    "\n",
+    "nums = [2,7,11,15]\n",
+    "target = 9\n",
+    "assert two_sum(nums, target) in ([0,1], [1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.18 µs ± 74.2 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def two_sum(arr: list[int], target: int) -> list[int]:\n",
+    "    storage = {}\n",
+    "    for i, n in enumerate(arr):\n",
+    "        diff = target - n\n",
+    "        if diff in storage:\n",
+    "            return [storage[diff], i]\n",
+    "        storage[n] = i\n",
+    "\n",
+    "\n",
+    "nums = [2,7,11,15]\n",
+    "target = 9\n",
+    "assert two_sum(nums, target) in ([0,1], [1, 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
