121. Best time to buy and sell stock

--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -283,6 +283,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 121. Best time to buy and sell stock.\n",
+    "You are given an array prices where prices[i] is the price of a given stock on the ith day.\n",
+    "\n",
+    "You want to maximize your profit by choosing a single day to buy one stock and choosing a different day in the future to sell that stock.\n",
+    "\n",
+    "Return the maximum profit you can achieve from this transaction. If you cannot achieve any profit, return 0.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=1pkOgXD63yU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_profit(prices: list[int]) -> int:\n",
+    "    profit = 0\n",
+    "    for i in range(len(prices)):\n",
+    "        for j in range(i, len(prices)):\n",
+    "            current_profit = prices[j] - prices[i]\n",
+    "            if current_profit > profit:\n",
+    "                profit = current_profit\n",
+    "    return profit\n",
+    "\n",
+    "\n",
+    "prices = [7,1,5,3,6,4]\n",
+    "assert max_profit(prices) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_profit(prices: list[int]) -> int:\n",
+    "    res = 0\n",
+    "    l, r = 0, 1\n",
+    "    while r < len(prices):\n",
+    "        if prices[l] < prices[r]:\n",
+    "            profit = prices[r] - prices[l]\n",
+    "            res = max(res, profit)\n",
+    "        else:\n",
+    "            l += r  # !\n",
+    "        r += 1\n",
+    "    return res\n",
+    "\n",
+    "prices = [7,1,5,3,6,4]\n",
+    "assert max_profit(prices) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
