--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -339,6 +339,42 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 238. Product of array except self.\n",
+    "Given an integer array nums, return an array answer such that answer[i] is equal to the product of all the elements of nums except nums[i].\n",
+    "\n",
+    "The product of any prefix or suffix of nums is guaranteed to fit in a 32-bit integer.\n",
+    "\n",
+    "You must write an algorithm that runs in O(n) time and without using the division operation.\n",
+    "\n",
+    "URL: https://www.youtube.com/watch?v=bNvIQI2wAjk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def product_except_self(arr: list[int]) -> list[int]:\n",
+    "    res = [1] * len(arr)\n",
+    "    prefix = 1\n",
+    "    for i in range(len(arr)):\n",
+    "        res[i] = prefix\n",
+    "        prefix *= arr[i]\n",
+    "    postfix = 1\n",
+    "    for i in range(len(arr) - 1, -1, -1):\n",
+    "        res[i] *= postfix\n",
+    "        postfix *= arr[i]\n",
+    "    return res\n",
+    "\n",
+    "nums = [1,2,3,4]\n",
+    "assert product_except_self(nums) == [24,12,8,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
