--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.83 µs ± 152 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.13 µs ± 2.06 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -375,12 +375,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 53. Maximum subarray.\n",
+    "Given an integer array nums, find the subarray with the largest sum, and return its sum.\n",
+    "\n",
+    "Leetcode: https://leetcode.com/problems/maximum-subarray/description/ <br>\n",
+    "YouTube: https://www.youtube.com/watch?v=5WZl3MMT0Eg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_subarray(arr: list[int]) -> int:\n",
+    "    max_sum = arr[0]\n",
+    "    current_sum = 0\n",
+    "    for item in arr:\n",
+    "        if current_sum < 0:\n",
+    "            current_sum = 0\n",
+    "        current_sum += item\n",
+    "        max_sum = max(max_sum, current_sum)\n",
+    "    return max_sum\n",
+    "\n",
+    "\n",
+    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "assert max_subarray(nums) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
