--- a/leetcode/strings.ipynb
+++ b/leetcode/strings.ipynb
@@ -101,6 +101,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 125. Valid palindrome.\n",
+    "A phrase is a palindrome if, after converting all uppercase letters into lowercase letters and removing all non-alphanumeric characters, it reads the same forward and backward. Alphanumeric characters include letters and numbers.\n",
+    "\n",
+    "Given a string s, return true if it is a palindrome, or false otherwise.\n",
+    "\n",
+    "Leetcode: https://leetcode.com/problems/valid-palindrome/description/<br>\n",
+    "YouTube: https://www.youtube.com/watch?v=jJXJ16kPFWg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_palindrome(s: str) -> bool:\n",
+    "    s_list = [ch for ch in s.lower() if ch.isalnum()]\n",
+    "    l, r = 0, len(s_list) - 1\n",
+    "    while l < r:\n",
+    "        if s_list[l] != s_list[r]:\n",
+    "            return False\n",
+    "        l += 1\n",
+    "        r -= 1\n",
+    "    return True\n",
+    "\n",
+    "s = \"A man, a plan, a canal: Panama\"\n",
+    "assert is_palindrome(s) == True\n",
+    "s = \"race a car\"\n",
+    "assert is_palindrome(s) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -120,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
