--- a/leetcode/arrays.ipynb
+++ b/leetcode/arrays.ipynb
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.13 µs ± 2.06 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "666 ns ± 7.83 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
