3. Longest substring without repeating

--- a/leetcode/strings.ipynb
+++ b/leetcode/strings.ipynb
@@ -136,6 +136,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 3. Longest substring without repeating characters.\n",
+    "Given a string s, find the length of the longest substring without repeating characters.\n",
+    "\n",
+    "Leetcode: https://leetcode.com/problems/longest-substring-without-repeating-characters/description/<br>\n",
+    "YouTube: https://www.youtube.com/watch?v=wiGpQwVHdE0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def length_of_longest_substring(s: str) -> int:\n",
+    "    char_set = set()\n",
+    "    l = 0\n",
+    "    res = 0\n",
+    "    for r in range(len(s)):\n",
+    "        while s[r] in char_set:\n",
+    "            char_set.remove(s[l])\n",
+    "            l += 1\n",
+    "        char_set.add(s[r])\n",
+    "        res = max(res, len(char_set))\n",
+    "    return res\n",
+    "\n",
+    "s = \"abcabcbb\"\n",
+    "assert length_of_longest_substring(s) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -159,5 +194,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
