--- a/leetcode/stacks.ipynb
+++ b/leetcode/stacks.ipynb
@@ -49,6 +49,51 @@
     "ops = [\"5\",\"2\",\"C\",\"D\",\"+\"]\n",
     "assert cal_points(ops) == 30"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af4067a-a69b-4f0f-92b1-3868c7f7703b",
+   "metadata": {},
+   "source": [
+    "### 20. Valid parentheses.\n",
+    "Given a string s containing just the characters '(', ')', '{', '}', '[' and ']', determine if the input string is valid.\n",
+    "\n",
+    "An input string is valid if:\n",
+    "\n",
+    "Open brackets must be closed by the same type of brackets.\n",
+    "Open brackets must be closed in the correct order.\n",
+    "Every close bracket has a corresponding open bracket of the same type.\n",
+    "\n",
+    "Leetcode: https://leetcode.com/problems/valid-parentheses/description/<br>\n",
+    "YouTube: https://www.youtube.com/watch?v=WTzjTskDFMg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "be2b63d6-c258-4fc4-94bf-6ba0a96ab201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid(s: str) -> bool:\n",
+    "    stack = []\n",
+    "    close_to_open = {')': '(', ']': '[', '}': '{'}\n",
+    "    for ch in s:\n",
+    "        if ch in close_to_open:\n",
+    "            if stack and stack[-1] == close_to_open[ch]:\n",
+    "                stack.pop()\n",
+    "            else:\n",
+    "                return False\n",
+    "        else:\n",
+    "            stack.append(c)\n",
+    "    return True if not stack else False\n",
+    "\n",
+    "s = \"()[]{}\"\n",
+    "assert is_valid(s) == True\n",
+    "\n",
+    "s = \"(]\"\n",
+    "assert is_valid(s) == False"
+   ]
   }
  ],
  "metadata": {
