--- a/leetcode/stacks.ipynb
+++ b/leetcode/stacks.ipynb
@@ -34,17 +34,17 @@
    "outputs": [],
    "source": [
     "def cal_points(operations: list[int]) -> int:\n",
-    "    stack = []\n",
+    "    _stack = []\n",
     "    for item in operations:\n",
     "        if item == '+':\n",
-    "            stack.append(stack[-1] + stack[-2])\n",
+    "            _stack.append(_stack[-1] + _stack[-2])\n",
     "        elif item == 'D':\n",
-    "            stack.append(2 * stack[-1])\n",
+    "            _stack.append(2 * _stack[-1])\n",
     "        elif item == 'C':\n",
-    "            stack.pop()\n",
+    "            _stack.pop()\n",
     "        else:\n",
-    "            stack.append(int(item))\n",
-    "    return sum(stack)\n",
+    "            _stack.append(int(item))\n",
+    "    return sum(_stack)\n",
     "\n",
     "ops = [\"5\",\"2\",\"C\",\"D\",\"+\"]\n",
     "assert cal_points(ops) == 30"
@@ -70,29 +70,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "be2b63d6-c258-4fc4-94bf-6ba0a96ab201",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid(s: str) -> bool:\n",
-    "    stack = []\n",
+    "    _stack = []\n",
     "    close_to_open = {')': '(', ']': '[', '}': '{'}\n",
     "    for ch in s:\n",
     "        if ch in close_to_open:\n",
-    "            if stack and stack[-1] == close_to_open[ch]:\n",
-    "                stack.pop()\n",
+    "            if _stack and _stack[-1] == close_to_open[ch]:\n",
+    "                _stack.pop()\n",
     "            else:\n",
     "                return False\n",
     "        else:\n",
-    "            stack.append(c)\n",
-    "    return True if not stack else False\n",
+    "            _stack.append(ch)\n",
+    "    return True if not _stack else False\n",
     "\n",
     "s = \"()[]{}\"\n",
     "assert is_valid(s) == True\n",
     "\n",
     "s = \"(]\"\n",
     "assert is_valid(s) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31da9af5-b1cc-43c7-b43d-f19494ab4c86",
+   "metadata": {},
+   "source": [
+    "### 155. Min _stack\n",
+    "Design a _stack that supports push, pop, top, and retrieving the minimum element in constant time.\n",
+    "\n",
+    "Implement the MinStack class:\n",
+    "\n",
+    "MinStack() initializes the _stack object.\n",
+    "void push(int val) pushes the element val onto the _stack.\n",
+    "void pop() removes the element on the top of the _stack.\n",
+    "int top() gets the top element of the _stack.\n",
+    "int getMin() retrieves the minimum element in the _stack.\n",
+    "You must implement a solution with O(1) time complexity for each function.\n",
+    "\n",
+    "Leetcode: https://leetcode.com/problems/min-_stack/description/<br>\n",
+    "YouTube: https://www.youtube.com/watch?v=qkLl7nAwDPo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "06132da8-0996-45c3-aae7-2b29ccc72550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1]\n",
+      "[1, -2]\n",
+      "[1, -2]\n",
+      "[1, -2, 5]\n",
+      "[1, -2, -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MinStack:\n",
+    "    def __init__(self):\n",
+    "        self._stack = []\n",
+    "        self._min_stack = []\n",
+    "\n",
+    "    def push(self, value: int) -> None:\n",
+    "        if not self._min_stack or value < self._min_stack[-1]:\n",
+    "            self._min_stack.append(value)\n",
+    "        else:\n",
+    "            self._min_stack.append(self._min_stack[-1])\n",
+    "        self._stack.append(value)\n",
+    "        print(self._stack)\n",
+    "        print(self._min_stack)\n",
+    "\n",
+    "    def pop(self) -> None:\n",
+    "        self._stack.pop()\n",
+    "        self._min_stack.pop()\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        return self._stack[-1]\n",
+    "\n",
+    "    def getMin(self) -> int:\n",
+    "        return self._min_stack[-1]\n",
+    "\n",
+    "my_stack = MinStack()\n",
+    "my_stack.push(1)\n",
+    "my_stack.push(-2)\n",
+    "my_stack.push(5)"
    ]
   }
  ],
