--- a/leetcode/stacks.ipynb
+++ b/leetcode/stacks.ipynb
@@ -118,23 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "06132da8-0996-45c3-aae7-2b29ccc72550",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1]\n",
-      "[1, -2]\n",
-      "[1, -2]\n",
-      "[1, -2, 5]\n",
-      "[1, -2, -2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MinStack:\n",
     "    def __init__(self):\n",
@@ -158,12 +145,7 @@
     "        return self._stack[-1]\n",
     "\n",
     "    def getMin(self) -> int:\n",
-    "        return self._min_stack[-1]\n",
-    "\n",
-    "my_stack = MinStack()\n",
-    "my_stack.push(1)\n",
-    "my_stack.push(-2)\n",
-    "my_stack.push(5)"
+    "        return self._min_stack[-1]\n"
    ]
   }
  ],
@@ -183,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
