--- a/neetcode/arrays_and_hashing.ipynb
+++ b/neetcode/arrays_and_hashing.ipynb
@@ -57,6 +57,37 @@
     "t = \"carrace\"\n",
     "assert is_anagram(s, t) == True"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Two Sum.\n",
+    "Given an array of integers nums and an integer target, return the indices i and j such that nums[i] + nums[j] == target and i != j.\n",
+    "\n",
+    "You may assume that every input has exactly one pair of indices i and j that satisfy the condition.\n",
+    "\n",
+    "Return the answer with the smaller index first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_sum(arr: list[int], target: int) -> list[int]:\n",
+    "    storage = {}\n",
+    "    for i, n in enumerate(arr):\n",
+    "        diff = target - n\n",
+    "        if diff in storage:\n",
+    "            return [storage[diff], i]\n",
+    "        storage[n] = i\n",
+    "\n",
+    "nums = [3,4,5,6]\n",
+    "target = 7\n",
+    "assert two_sum(nums, target) == [0, 1]"
+   ]
   }
  ],
  "metadata": {
