--- a/neetcode/arrays_and_hashing.ipynb
+++ b/neetcode/arrays_and_hashing.ipynb
@@ -88,6 +88,75 @@
     "target = 7\n",
     "assert two_sum(nums, target) == [0, 1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anagram Groups.\n",
+    "Given an array of strings strs, group all anagrams together into sublists. You may return the output in any order.\n",
+    "\n",
+    "An anagram is a string that contains the exact same characters as another string, but the order of the characters can be different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['act', 'cat'], ['pots', 'tops', 'stop'], ['hat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def group_anagrams(strs: list[str]) -> list[list[str]]:\n",
+    "    res = defaultdict(list)\n",
+    "    for word in strs:\n",
+    "        key = ''.join(sorted(word))\n",
+    "        res[key].append(word)\n",
+    "    return list(res.values())\n",
+    "\n",
+    "strs = [\"act\",\"pots\",\"tops\",\"cat\",\"stop\",\"hat\"]\n",
+    "assert group_anagrams(strs) == [['act', 'cat'], ['pots', 'tops', 'stop'], ['hat']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([['act', 'cat'], ['pots', 'tops', 'stop'], ['hat']])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def group_anagrams(strs: list[str]) -> list[list[str]]:\n",
+    "    res = defaultdict(list)\n",
+    "    for s in strs:\n",
+    "        counter = [0] * 26\n",
+    "        for ch in s:\n",
+    "            counter[ord(ch) - ord('a')] += 1\n",
+    "        res[tuple(counter)].append(s)\n",
+    "    return res.values()\n",
+    "\n",
+    "strs = [\"act\",\"pots\",\"tops\",\"cat\",\"stop\",\"hat\"]\n",
+    "group_anagrams(strs)"
+   ]
   }
  ],
  "metadata": {
