--- a/neetcode/arrays_and_hashing.ipynb
+++ b/neetcode/arrays_and_hashing.ipynb
@@ -157,6 +157,52 @@
     "strs = [\"act\",\"pots\",\"tops\",\"cat\",\"stop\",\"hat\"]\n",
     "group_anagrams(strs)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top K elements in list.\n",
+    "Given an integer array nums and an integer k, return the k most frequent elements within the array.\n",
+    "\n",
+    "The test cases are generated such that the answer is always unique.\n",
+    "\n",
+    "You may return the output in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def top_k_frequent(nums: list[int], k: int) -> list[int]:\n",
+    "    counter = {}\n",
+    "    freq = [[] for i in range(len(nums) + 1)]\n",
+    "    res = []\n",
+    "\n",
+    "    for num in nums:\n",
+    "        counter[num] = 1 + counter.get(num, 0)\n",
+    "    \n",
+    "    for num, count in counter.items():\n",
+    "        freq[count].append(num)\n",
+    "\n",
+    "    for i in range(len(freq) - 1, 0, -1):\n",
+    "        for num in freq[i]:\n",
+    "            res.append(num)\n",
+    "            if len(res) == k:\n",
+    "                return res\n",
+    "\n",
+    "nums = [4, 5, 6, 7, 8, 6, 7, 7, 8, 8]\n",
+    "k = 3\n",
+    "assert top_k_frequent(nums, k) == [7, 8, 6]\n",
+    "\n",
+    "nums = [7, 7]\n",
+    "k = 1\n",
+    "assert top_k_frequent(nums, k) == [7]"
+   ]
   }
  ],
  "metadata": {
